--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.64.1",
         "axios": "^1.7.9",
         "clsx": "^2.1.1",
         "next": "15.1.4",
@@ -19,6 +20,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.4.0",
+        "react-toastify": "^11.0.3",
         "tailwind-merge": "^2.6.0"
     },
     "devDependencies": {
