--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@tanstack/react-query": "^5.64.1",
         "axios": "^1.7.9",
         "clsx": "^2.1.1",
+        "memoize-one": "^6.0.0",
         "next": "15.1.4",
         "next-intl": "^3.26.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.4.0",
         "react-toastify": "^11.0.3",
+        "react-window": "^1.8.11",
         "tailwind-merge": "^2.6.0"
     },
     "devDependencies": {
