--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
-        "@tanstack/react-query": "^5.64.1",
+        "@tanstack/react-query": "^5.66.9",
         "axios": "^1.7.9",
         "clsx": "^2.1.1",
         "memoize-one": "^6.0.0",
@@ -38,6 +38,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@types/react-window": "^1.8.8",
         "daisyui": "^4.12.23",
         "eslint": "^9",
         "eslint-config-next": "15.1.4",
