--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "react-icons": "^5.4.0",
         "react-toastify": "^11.0.3",
         "react-window": "^1.8.11",
-        "tailwind-merge": "^2.6.0"
+        "tailwind-merge": "^2.6.0",
+        "universal-cookie": "^7.2.2"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^3.2.3",
