--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@tanstack/react-query": "^5.66.9",
         "axios": "^1.7.9",
         "clsx": "^2.1.1",
+        "fast-sort": "^3.4.1",
+        "fuse.js": "^7.1.0",
         "memoize-one": "^6.0.0",
         "next": "15.1.4",
         "next-intl": "^3.26.3",
